@@ -104,18 +104,19 @@
         </ul>
 
 
-        {% if download %}
-        <h2 class="align-center">Download</h2>
+        {% if transfer %}
+        <h2 class="align-center">Transfer</h2>
         <ul>
-            <li>URL: <span class="white">{{ download.url }}</span></li>
-            <li>Target: <span class="white">local</span></li>
-            <li>Destination: <span class="white">{{ download.destination }}</span></li>
-            <li>Size: <span class="white">{{ download.size }}</span></li>
-            <li>Start time: <span class="white">{{ download.start_ts|int }}</span></li>
-            <li>Progress: <span class="white">{{ download.progress and (download.progress/100)|round(4) }}</span></li>
-            <li>Remaining time: <span class="white">{{ download.time_remaining() }}</span></li>
-            <li>To select: <span class="white">{{ download.to_select }}</span></li>
-            <li>To print: <span class="white">{{ download.to_print }}</span></li>
+            <li>Type: <span class="white">{{ transfer.transfer_type.value }}</span></li>
+            <li>URL: <span class="white">{{ transfer.url }}</span></li>
+            <li>Path: <span class="white">{{ transfer.path }}</span></li>
+            <li>Size: <span class="white">{{ translate.size }}</span></li>
+            <li>Start time: <span class="white">{{ translate.start_ts|int }}</span></li>
+            <li>Progress: <span class="white">{{ transfer.progress }}</span></li>
+            <li>Remaining time: <span class="white">{{ transfer.time_remaining() }}</span></li>
+            <li>Complete: <span class="white">{{ transfer.complete }}</span></li>
+            <li>To select: <span class="white">{{ transfer.to_select }}</span></li>
+            <li>To print: <span class="white">{{ transfer.to_print }}</span></li>
         </ul>
         {% endif %}
 
