@@ -11,8 +11,7 @@ def link_info(req):
     """Return link-info page."""
     prusa_link = app.daemon.prusa_link
     printer = prusa_link.printer if prusa_link else None
-    download = printer.download_mgr.current
-    upload = app.posting_data
+    transfer = printer.transfer if printer else None
     return generate_page(req,
                          "link_info.html",
                          daemon=app.daemon,
@@ -22,5 +21,4 @@ def link_info(req):
                          version=__version__,
                          sdk_version=sdk_version,
                          errors=errors.status(),
-                         download=download,
-                         upload=upload)
+                         transfer=transfer)
